fixed outputTemplate overflowing issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -432,8 +432,7 @@ main {
   p {
     font-weight: 400;
     font-size: $fontSize-default;
-    overflow: hidden;
-
+    width: 100%;
     text-rendering: auto;
     letter-spacing: normal;
     word-spacing: normal;
